# MBTI

./: .gitignore  Main.py  README.md  pyproject.toml
config/: db_config.py
managers/: __init__.py  data_manager.py  database.py  specific.py  specific_manager.py
models/: mbti.py
pages/: 1_Specific.py  2_Data.py
src/mbti/: __init__.py  cli.py
tests/: test_mbti.py
